// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UPortButton component sanity matches default snapshot 1`] = `
<Styled(Styled(Styled(styled.div)))
  as="button"
  border="none"
  borderRadius={1}
  boxShadow={1}
  fontSize="inherit"
  fontWeight="bold"
  lineHeight={1}
  position="relative"
  size="medium"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "breakpoints": Array [
        "40em",
        "52em",
        "64em",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "large",
          "lineHeight": "1.5rem",
          "paddingBottom": ".8rem",
          "paddingLeft": "1.75rem",
          "paddingRight": "1.75rem",
          "paddingTop": ".8rem",
        },
        "medium": Object {
          "fontSize": "default",
          "lineHeight": "1.5em",
          "paddingBottom": ".75em",
          "paddingLeft": "1.5em",
          "paddingRight": "1.5em",
          "paddingTop": ".75em",
        },
        "small": Object {
          "fontSize": "small",
          "height": "40px",
          "paddingLeft": 3,
          "paddingRight": 3,
        },
      },
      "buttons": Object {
        "base": Object {
          "--active-color": "#000A28",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#C2C4CC",
          "--hover-color": "#1A2233",
          "--main-color": "#475166",
          "--outline-active-color": "#DFE0E5",
          "--outline-hover-color": "#F0F0F2",
        },
        "danger": Object {
          "--active-color": "#990000",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#EBABAB",
          "--hover-color": "#A50000",
          "--main-color": "#B20000",
          "--outline-active-color": "#F2CECE",
          "--outline-hover-color": "#FAEBEB",
        },
        "primary": Object {
          "--active-color": "#001146",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#8CBCFF",
          "--hover-color": "#0041E5",
          "--main-color": "#1A5AFE",
          "--outline-active-color": "#B2D2FF",
          "--outline-hover-color": "#E5F1FF",
        },
        "success": Object {
          "--active-color": "#006647",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#85CCAF",
          "--hover-color": "#007350",
          "--main-color": "#008055",
          "--outline-active-color": "#B8E6D3",
          "--outline-hover-color": "#DFF2EA",
        },
        "warning": Object {
          "--active-color": "#994D00",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#F7CE88",
          "--hover-color": "#AC6300",
          "--main-color": "#BF7900",
          "--outline-active-color": "#FFDEA6",
          "--outline-hover-color": "#FFF1D9",
        },
      },
      "colors": Object {
        "amethyst": "#AE4BCB",
        "background": "#ffffff",
        "base000": "#FBFBFC",
        "base100": "#F8F8F9",
        "base200": "#F0F0F2",
        "base300": "#DFE0E5",
        "base400": "#C2C4CC",
        "base500": "#989CA6",
        "base600": "#777C8C",
        "base700": "#475166",
        "base800": "#1A2233",
        "base900": "#000A28",
        "black": "#000A28",
        "blue": "#1A5AFE",
        "blurple": "#6367EB",
        "cyan": "#3BE3DB",
        "danger": "#E58989",
        "dark-gray": "#475166",
        "error100": "#FCF5F5",
        "error200": "#FAEBEB",
        "error300": "#F2CECE",
        "error400": "#EBABAB",
        "error500": "#E58989",
        "error600": "#CC5252",
        "error700": "#B20000",
        "error800": "#A50000",
        "error900": "#990000",
        "gradient1": "linear-gradient(173.21deg, #1A5AFE 17.68%, #3BE3DB 86.46%)",
        "gradient2": "linear-gradient(90deg, rgba(248, 36, 149, 0) 37.5%, #FBD448 100%), linear-gradient(173.21deg, #2C56DD 53.66%, #F82495 100%)",
        "gradient3": "linear-gradient(90deg, #1A5AFE 12.5%, #3BE3DB 74.99%, #C0F188 100%)",
        "gradient4": "linear-gradient(173.21deg, #1A5AFE 26.52%, #F82495 91.16%)",
        "greentea": "#C0F188",
        "grey": "#989CA6",
        "info": "#8CBCFF",
        "light-gray": "#F8F8F9",
        "light-silver": "#DFE0E5",
        "magenta": "#D73184",
        "mid-gray": "#777C8C",
        "moon-gray": "#F0F0F2",
        "near-black": "#1A2233",
        "near-white": "#FBFBFC",
        "pine": "#2F837E",
        "pink": "#F82495",
        "primary": "#1A5AFE",
        "primary-dark": "#001146",
        "primary-light": "#6699FF",
        "primary100": "#F0F5FF",
        "primary200": "#E5F1FF",
        "primary300": "#B2D2FF",
        "primary400": "#8CBCFF",
        "primary500": "#6699FF",
        "primary600": "#4D79FF",
        "primary700": "#1A5AFE",
        "primary800": "#0041E5",
        "primary900": "#001146",
        "silver": "#C2C4CC",
        "success": "#69BFA0",
        "success100": "#F2FCF6",
        "success200": "#DFF2EA",
        "success300": "#B8E6D3",
        "success400": "#85CCAF",
        "success500": "#69BFA0",
        "success600": "#4BA687",
        "success700": "#008055",
        "success800": "#007350",
        "success900": "#006647",
        "terracotta": "#D88E1F",
        "text": "#000A28",
        "transparent": "transparent",
        "warning": "#F2BC61",
        "warning100": "#FFF8ED",
        "warning200": "#FFF1D9",
        "warning300": "#FFDEA6",
        "warning400": "#F7CE88",
        "warning500": "#F2BC61",
        "warning600": "#D9992B",
        "warning700": "#BF7900",
        "warning800": "#AC6300",
        "warning900": "#994D00",
        "white": "#ffffff",
        "yellow": "#FBD448",
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        400,
        500,
        600,
      ],
      "fonts": Object {
        "mono": "Monaco, Consolas, \\"Lucida Console\\", monospace",
        "sansSerif": "Inter, \\"Helvetica Neue\\", Arial, sans-serif",
      },
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#FBFBFC",
          "borderColor": "#DFE0E5",
          "color": "#777C8C",
        },
        "danger": Object {
          "backgroundColor": "#f7e5e5",
          "borderColor": "#B20000",
          "color": "#6a0000",
        },
        "info": Object {
          "backgroundColor": "#e8eefe",
          "borderColor": "#1A5AFE",
          "color": "#0f3698",
        },
        "success": Object {
          "backgroundColor": "#e5f2ee",
          "borderColor": "#008055",
          "color": "#004c33",
        },
        "warning": Object {
          "backgroundColor": "#fbf4e9",
          "borderColor": "#D9992B",
          "color": "#825b19",
        },
      },
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
        "32px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 4px 8px rgba(0, 0, 0, 0.1)",
        "0px 6px 12px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0px 10px 20px rgba(0, 0, 0, 0.1)",
        "0px 12px 24px rgba(0, 0, 0, 0.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
        512,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="primary"
  width={
    Array [
      1,
      "auto",
    ]
  }
>
  <ButtonBody
    size="medium"
  />
</Styled(Styled(Styled(styled.div)))>
`;

exports[`UPortButton component sanity matches themed snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "breakpoints": Array [
        "40em",
        "52em",
        "64em",
      ],
      "buttonSizes": Object {
        "large": Object {
          "fontSize": "large",
          "lineHeight": "1.5rem",
          "paddingBottom": ".8rem",
          "paddingLeft": "1.75rem",
          "paddingRight": "1.75rem",
          "paddingTop": ".8rem",
        },
        "medium": Object {
          "fontSize": "default",
          "lineHeight": "1.5em",
          "paddingBottom": ".75em",
          "paddingLeft": "1.5em",
          "paddingRight": "1.5em",
          "paddingTop": ".75em",
        },
        "small": Object {
          "fontSize": "small",
          "height": "40px",
          "paddingLeft": 3,
          "paddingRight": 3,
        },
      },
      "buttons": Object {
        "base": Object {
          "--active-color": "#000A28",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#C2C4CC",
          "--hover-color": "#1A2233",
          "--main-color": "#475166",
          "--outline-active-color": "#DFE0E5",
          "--outline-hover-color": "#F0F0F2",
        },
        "danger": Object {
          "--active-color": "#990000",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#EBABAB",
          "--hover-color": "#A50000",
          "--main-color": "#B20000",
          "--outline-active-color": "#F2CECE",
          "--outline-hover-color": "#FAEBEB",
        },
        "primary": Object {
          "--active-color": "#001146",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#8CBCFF",
          "--hover-color": "#0041E5",
          "--main-color": "#1A5AFE",
          "--outline-active-color": "#B2D2FF",
          "--outline-hover-color": "#E5F1FF",
        },
        "success": Object {
          "--active-color": "#006647",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#85CCAF",
          "--hover-color": "#007350",
          "--main-color": "#008055",
          "--outline-active-color": "#B8E6D3",
          "--outline-hover-color": "#DFF2EA",
        },
        "warning": Object {
          "--active-color": "#994D00",
          "--contrast-color": "#ffffff",
          "--disabled-color": "#F7CE88",
          "--hover-color": "#AC6300",
          "--main-color": "#BF7900",
          "--outline-active-color": "#FFDEA6",
          "--outline-hover-color": "#FFF1D9",
        },
      },
      "colors": Object {
        "amethyst": "#AE4BCB",
        "background": "#ffffff",
        "base000": "#FBFBFC",
        "base100": "#F8F8F9",
        "base200": "#F0F0F2",
        "base300": "#DFE0E5",
        "base400": "#C2C4CC",
        "base500": "#989CA6",
        "base600": "#777C8C",
        "base700": "#475166",
        "base800": "#1A2233",
        "base900": "#000A28",
        "black": "#000A28",
        "blue": "#1A5AFE",
        "blurple": "#6367EB",
        "cyan": "#3BE3DB",
        "danger": "#E58989",
        "dark-gray": "#475166",
        "error100": "#FCF5F5",
        "error200": "#FAEBEB",
        "error300": "#F2CECE",
        "error400": "#EBABAB",
        "error500": "#E58989",
        "error600": "#CC5252",
        "error700": "#B20000",
        "error800": "#A50000",
        "error900": "#990000",
        "gradient1": "linear-gradient(173.21deg, #1A5AFE 17.68%, #3BE3DB 86.46%)",
        "gradient2": "linear-gradient(90deg, rgba(248, 36, 149, 0) 37.5%, #FBD448 100%), linear-gradient(173.21deg, #2C56DD 53.66%, #F82495 100%)",
        "gradient3": "linear-gradient(90deg, #1A5AFE 12.5%, #3BE3DB 74.99%, #C0F188 100%)",
        "gradient4": "linear-gradient(173.21deg, #1A5AFE 26.52%, #F82495 91.16%)",
        "greentea": "#C0F188",
        "grey": "#989CA6",
        "info": "#8CBCFF",
        "light-gray": "#F8F8F9",
        "light-silver": "#DFE0E5",
        "magenta": "#D73184",
        "mid-gray": "#777C8C",
        "moon-gray": "#F0F0F2",
        "near-black": "#1A2233",
        "near-white": "#FBFBFC",
        "pine": "#2F837E",
        "pink": "#F82495",
        "primary": "#1A5AFE",
        "primary-dark": "#001146",
        "primary-light": "#6699FF",
        "primary100": "#F0F5FF",
        "primary200": "#E5F1FF",
        "primary300": "#B2D2FF",
        "primary400": "#8CBCFF",
        "primary500": "#6699FF",
        "primary600": "#4D79FF",
        "primary700": "#1A5AFE",
        "primary800": "#0041E5",
        "primary900": "#001146",
        "silver": "#C2C4CC",
        "success": "#69BFA0",
        "success100": "#F2FCF6",
        "success200": "#DFF2EA",
        "success300": "#B8E6D3",
        "success400": "#85CCAF",
        "success500": "#69BFA0",
        "success600": "#4BA687",
        "success700": "#008055",
        "success800": "#007350",
        "success900": "#006647",
        "terracotta": "#D88E1F",
        "text": "#000A28",
        "transparent": "transparent",
        "warning": "#F2BC61",
        "warning100": "#FFF8ED",
        "warning200": "#FFF1D9",
        "warning300": "#FFDEA6",
        "warning400": "#F7CE88",
        "warning500": "#F2BC61",
        "warning600": "#D9992B",
        "warning700": "#BF7900",
        "warning800": "#AC6300",
        "warning900": "#994D00",
        "white": "#ffffff",
        "yellow": "#FBD448",
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        400,
        500,
        600,
      ],
      "fonts": Object {
        "mono": "Monaco, Consolas, \\"Lucida Console\\", monospace",
        "sansSerif": "Inter, \\"Helvetica Neue\\", Arial, sans-serif",
      },
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#FBFBFC",
          "borderColor": "#DFE0E5",
          "color": "#777C8C",
        },
        "danger": Object {
          "backgroundColor": "#f7e5e5",
          "borderColor": "#B20000",
          "color": "#6a0000",
        },
        "info": Object {
          "backgroundColor": "#e8eefe",
          "borderColor": "#1A5AFE",
          "color": "#0f3698",
        },
        "success": Object {
          "backgroundColor": "#e5f2ee",
          "borderColor": "#008055",
          "color": "#004c33",
        },
        "warning": Object {
          "backgroundColor": "#fbf4e9",
          "borderColor": "#D9992B",
          "color": "#825b19",
        },
      },
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
        "32px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0px 4px 8px rgba(0, 0, 0, 0.1)",
        "0px 6px 12px rgba(0, 0, 0, 0.1)",
        "0px 8px 16px rgba(0, 0, 0, 0.1)",
        "0px 10px 20px rgba(0, 0, 0, 0.1)",
        "0px 12px 24px rgba(0, 0, 0, 0.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
        512,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
>
  <UPortButton
    border="none"
    borderRadius={1}
    boxShadow={1}
    fontSize="inherit"
    fontWeight="bold"
    lineHeight={1}
    position="relative"
    size="medium"
    variant="primary"
    width={
      Array [
        1,
        "auto",
      ]
    }
  />
</ThemeProvider>
`;
